This file documents the revision history for Perl extension Phonebook.

0.03
        - Upgrade to Catalyst 5.60
        - Move Uf::Webadmin::Phonebook to Phonebook
        - Remove Phonebook::Constants, as it wasn't helping with
          readability

0.02  Mon Nov 21 18:24:31 2005
        - Improve address parsing and output
        - Add vCard output
        - Move away from short package names (C -> Controller, etc.)

0.01  Mon Aug  8 18:01:18 2005
        - Initial revision, generated by Catalyst