@@ -5,6 +5,8 @@ This file documents the revision history for Perl extension Phonebook.
         - Move Uf::Webadmin::Phonebook to Phonebook
         - Remove Phonebook::Constants, as it wasn't helping with
           readability
+        - Rename Phonebook::Utilities to Phonebook::Util for
+          consistency with other Perl packages
 
 0.02  Mon Nov 21 18:24:31 2005
         - Improve address parsing and output
